# DataSculptor

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  stats.txt
cvml2/: __init__.py  annotation.py  dataset_cropping.py  det_dataset.py  image_source.py  iseg_dataset.py
datasculptor/: __init__.py  annotation.py  dataset.py  dataset_cropping.py  det_dataset.py  image_source.py  iseg_dataset.py  logger.py  tools.py
examples/: aerial_dataset.py  create_cropped_ds.py  satellite_dataset.py  satellite_deeplab_dataset.py
tests/: test_annotation.py  test_cropping.py  test_dataset.py  test_detection_dataset.py  test_shapely.py  test_tools.py
