[tool.poetry]
name = "datasculptor"
version = "0.1.0"
description = ""
authors = ["SanchoPanso <20alexchernik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.8.1.78"
pandas = "^2.1.4"
pillow = "^10.1.0"
pytest = "^7.4.3"
pyyaml = "^6.0.1"
tqdm = "^4.66.1"
filesplit = "^4.0.1"
rasterio = "^1.3.9"
shapely = "^2.0.2"
albumentations = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
