[tool.poetry]
name = "datasculptor"
version = "0.1.0"
description = ""
authors = ["SanchoPanso <20alexchernik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.*"
opencv-python = "*"
pandas = "*"
pillow = "*"
pytest = "*"
pyyaml = "*"
tqdm = "*"
filesplit = "*"
rasterio = "*"
shapely = "*"
albumentations = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
