[tool.poetry]
name = "datasculptor"
version = "0.1.0"
description = ""
authors = ["SanchoPanso <20alexchernik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <4"
numpy = "^2.1.2"
opencv-python = "^4.10.0.84"
pandas = "^2.2.3"
pillow = "^10.4.0"
pytest = "^8.3.3"
pyyaml = "^6.0.2"
tqdm = "^4.66.5"
filesplit = "^4.0.1"
rasterio = "^1.4.1"
shapely = "^2.0.6"
albumentations = "^1.4.18"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
